Disable various MediaSourcePlayerTests on unsupported devices

Most MediaSourcePlayerTests require vp8 support to work.
Since VP8 was recently disabled on all MediaTek chipsets,
this change disables them on unsupported devices.

It also fixes media_codec_util's IsVp8/9DecoderAvailable
by using the accurate name for the respective mimes.

BUG=611578

Review-Url: https://codereview.chromium.org/1975013002
Cr-Commit-Position: refs/heads/master@{#393422}

Former-commit-id: 8a541deee22a02150efc1014167520c835be7e5c